# mantra-recitation-etl

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml  requirements.txt
config/: .env.example  dagster.yaml
dagster/: __init__.py  assets.py  resources.py
sqlmesh/: config.yaml
sqlmesh/models/: .gitkeep
sqlmesh/models/cleansed/: cln_mantra_recitation.sql
sqlmesh/models/marts/: mantra_recitations_daily.sql  user_mantra_summary.sql
sqlmesh/models/staging/: stg_mantra_recitations.sql
tests/: __init__.py
